2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* capplet-util.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-12  Lauris Kaplinski  <lauris@ximian.com>

	* gconf-property-editor.c (peditor_font_value_changed): Kill warning

2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.[ch]: Added font editor.

Sun Jan  6 02:52:59 2002  Jonathan Blandford  <jrb@redhat.com>

	* gconf-property-editor.c (peditor_select_radio_widget_changed):
	avoid recursive loops by only setting the UI if we're active.

2002-01-05  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_*_value_changed): Only remove
	from changeset if the changeset is non-NULL

2002-01-04  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_set_gconf_value):
	Implement. Sets the GConf value either in the changeset, or if
	changeset is NULL, directly
	(peditor_*_widget_changed): Use peditor_set_gconf_value
	(gconf_peditor_new_*): Don't complain if changeset is NULL

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c: Eliminate compiler warnings

	* capplet-util.c: Eliminate compiler warnings

	* gconf-property-editor.c (gconf_peditor_new): Fold the callback
	back in; accept variable argument list with extra parameters
	(gconf_peditor_new_filename): Return the property editor
	(gconf_peditor_new_string_valist): Split this out
	(gconf_peditor_new_string): Call _valist variant
	(gconf_peditor_new*): Update

2001-12-19  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (gconf_peditor_new_float_range)
	(gconf_peditor_new_int_range): Connect to value_changed signal Add
	properties conv-{to|from}-widget-cb and use those for conversion
	of values to and from the widget
	(peditor_{int|float}_range_value_changed, friends): Combine into
	peditor_numeric_*
	(gconf_peditor_new): Implement. Factor out some common code from
	the various type-specific constructors