@@ -10,6 +10,7 @@ INCLUDES = \
 noinst_LIBRARIES = libcommon.a
 
 libcommon_a_SOURCES = \
+	activate-settings-daemon.c	activate-settings-daemon.h	\
 	capplet-util.c			capplet-util.h			\
 	gconf-property-editor.c		gconf-property-editor.h		\
 	gconf-property-editor-marshal.c	gconf-property-editor-marshal.h
