@@ -1,3 +1,13 @@
+2002-03-10  Seth Nickell  <snickell@stanford.edu>
+
+	* Makefile.am:
+	* activate-settings-daemon.c: (popup_error_message),
+	(activate_settings_daemon):
+	* activate-settings-daemon.h:
+
+	Add new client interface for activating the settings daemon
+	if its not already running.
+	
 2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* capplet-util.c: s/PACKAGE/GETTEXT_PACKAGE/g
